<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/login_background"
android:gravity="center"
android:padding="16dp"
tools:context=".SignInFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signin"
        android:textSize="20sp"
        android:padding="36dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/background"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_account_circle"/>

    <EditText
        android:id="@+id/userNameSignInET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_corner"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:padding="18dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordSignInET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:padding="18dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginSignInBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signin"
        android:textColor="@color/button_color"
        android:background="@drawable/rounded_corner"
        android:textSize="20sp"
        android:padding="18dp" />

</LinearLayout>

</RelativeLayout>